# VanillaClient

./: README.md
godot/: icon.svg.import  node_3d.tscn  project.godot  test.tscn
godot/models/world/: gaitou.glb  gaitou.glb.import  room.glb  room.glb.import  sakura_shrine.glb.import  sakura_shrine_mapletree2.png.import  sakura_shrine_sakura6.png.import  sakura_shrine_sakura7.png.import  world.yaml
godot/world/: gaitou.glb.import  room.glb.import  sakura_shrine.glb.import  sakura_shrine_mapletree2.png.import  sakura_shrine_sakura6.png.import  sakura_shrine_sakura7.png.import  world.yaml
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/world/: error.rs  gltf.rs  mod.rs  test.rs  transform.rs  world_format.rs  yaml_loader.rs
