[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
color-spantrace = "0.2.1"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"]}
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
